fixed my issues, and got the user preferences aligned better

--- a/ColorCode/frontend/static/css/index.css
+++ b/ColorCode/frontend/static/css/index.css
@@ -19,6 +19,27 @@ body {
   height: 100%;
 }
 
+#prefs {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  min-width: 75%;
+  margin: auto;
+  text-align: center;
+}
+#prefs td:nth-child(1){
+text-align: right;
+}
+#prefs td:nth-child(2){
+  margin: 1px;
+}
+#prefs td:nth-child(3){
+text-align: left;
+}
+#prefs td {
+border: 0px;
+padding: 2px;
+}
+
 /*******************/
 /*** FAKE-UI CSS ***/
 /*******************/
